# ip-inventory

./: CMakeLists.txt  CMakeLists.txt.bak  LICENSE  README.md
config/: config.json
gui/: index.html
include/app/: AppConfig.h  CorsMiddleware.h  Router.h
include/common/: Types.h
include/controllers/: AssignIpController.h  IpPoolController.h  ReserveIpController.h  ServiceIdChangeController.h  ServiceIdQueryController.h  TerminateIpController.h
include/repository/: IpRepository.h
include/services/: AssignIpService.h  IpPoolService.h  ReservationExpiryJob.h  ReserveIpService.h  ServiceIdChangeService.h  ServiceIdQueryService.h  TerminateIpService.h
include/utils/: IpUtils.h  JsonValidator.h
scripts/: install_and_build.sh  setup_db.sh
sql/: schema.sql
src/: main.cpp
src/app/: AppConfig.cpp  Router.cpp
src/controllers/: AssignIpController.cpp  IpPoolController.cpp  ReserveIpController.cpp  ServiceIdChangeController.cpp  ServiceIdQueryController.cpp  TerminateIpController.cpp
src/repository/: IpRepository.cpp
src/services/: AssignIpService.cpp  IpPoolService.cpp  ReservationExpiryJob.cpp  ReserveIpService.cpp  ServiceIdChangeService.cpp  ServiceIdQueryService.cpp  TerminateIpService.cpp
src/utils/: IpUtils.cpp  JsonValidator.cpp
swagger/: openapi.yaml
